@@ -37,16 +37,13 @@
 #include "filetests.h"
 #include "io_utils.h"
 #include "pack.h"
+#include "posixy_wrapper.h"
 #include "net/remoteconnection.h"
 #include "replicate_utils.h"
 #include "replicationprotocol.h"
 #include "safeerrno.h"
 #include "str.h"
 #include "stringutils.h"
-
-#ifdef __WIN32__
-# include "msvc_posix_wrapper.h"
-#endif
 
 #include <cstdio> // For rename().
 
@@ -120,11 +117,7 @@ ChertDatabaseReplicator::process_changeset_chunk_base(const string & tablename,
     // Write base_size bytes from start of buf to base file for tablename
     string tmp_path = db_dir + "/" + tablename + "tmp";
     string base_path = db_dir + "/" + tablename + ".base" + letter;
-#ifdef __WIN32__
-    int fd = msvc_posix_open(tmp_path.c_str(), O_WRONLY | O_CREAT | O_TRUNC | O_BINARY);
-#else
-    int fd = ::open(tmp_path.c_str(), O_WRONLY | O_CREAT | O_TRUNC | O_BINARY, 0666);
-#endif
+    int fd = posixy_open(tmp_path.c_str(), O_WRONLY | O_CREAT | O_TRUNC | O_BINARY, 0666);
     if (fd == -1) {
 	string msg = "Failed to open ";
 	msg += tmp_path;
@@ -140,11 +133,7 @@ ChertDatabaseReplicator::process_changeset_chunk_base(const string & tablename,
     // Finish writing the changeset before moving the base file into place.
     write_and_clear_changes(changes_fd, buf, base_size);
 
-#if defined __WIN32__
-    if (msvc_posix_rename(tmp_path.c_str(), base_path.c_str()) < 0) {
-#else
-    if (rename(tmp_path.c_str(), base_path.c_str()) < 0) {
-#endif
+    if (posixy_rename(tmp_path.c_str(), base_path.c_str()) < 0) {
 	// With NFS, rename() failing may just mean that the server crashed
 	// after successfully renaming, but before reporting this, and then
 	// the retried operation fails.  So we need to check if the source
@@ -177,11 +166,7 @@ ChertDatabaseReplicator::process_changeset_chunk_blocks(const string & tablename
     write_and_clear_changes(changes_fd, buf, ptr - buf.data());
 
     string db_path = db_dir + "/" + tablename + ".DB";
-#ifdef __WIN32__
-    int fd = msvc_posix_open(db_path.c_str(), O_WRONLY | O_CREAT | O_BINARY);
-#else
-    int fd = ::open(db_path.c_str(), O_WRONLY | O_CREAT | O_BINARY, 0666);
-#endif
+    int fd = posixy_open(db_path.c_str(), O_WRONLY | O_CREAT | O_BINARY, 0666);
     if (fd == -1) {
 	string msg = "Failed to open ";
 	msg += db_path;
