@@ -31,10 +31,6 @@
 #include "stringutils.h" // For STRINGIZE() and CONST_STRLEN().
 #include "str.h"
 
-#ifdef __WIN32__
-# include "msvc_posix_wrapper.h"
-#endif
-
 #include <cstdio> // For rename().
 #include <cstring> // For memcmp() and memcpy().
 #include <string>
