@@ -22,10 +22,7 @@
 #include <config.h>
 
 #include "io_utils.h"
-
-#ifdef __WIN32__
-# include "msvc_posix_wrapper.h"
-#endif
+#include "posixy_wrapper.h"
 
 #include "safeerrno.h"
 #include "safeunistd.h"
@@ -37,11 +34,7 @@
 bool
 io_unlink(const std::string & filename)
 {
-#ifdef __WIN32__
-    if (msvc_posix_unlink(filename.c_str()) == 0) {
-#else
-    if (unlink(filename.c_str()) == 0) {
-#endif
+    if (posixy_unlink(filename.c_str()) == 0) {
 	return true;
     }
     if (errno != ENOENT) {
