@@ -1,9 +1,8 @@
-/** @file msvc_posix_wrapper.h
- * @brief Provides wrappers with POSIX semantics under MSVC.
+/** @file posixy_wrapper.h
+ * @brief Provides wrappers with POSIXy semantics.
  */
-/* (misnamed, this isn't MSVC specific, but __WIN32__-specific) */
 /* Copyright 2007 Lemur Consulting Ltd
- * Copyright 2007 Olly Betts
+ * Copyright 2007,2012 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -21,19 +20,32 @@
  * USA
  */
 
-#ifndef XAPIAN_INCLUDED_MSVC_POSIX_WRAPPER_H
-#define XAPIAN_INCLUDED_MSVC_POSIX_WRAPPER_H
+#ifndef XAPIAN_INCLUDED_POSIXY_WRAPPER_H
+#define XAPIAN_INCLUDED_POSIXY_WRAPPER_H
 
+#ifdef __WIN32__
 /** Version of unlink() with POSIX-like semantics (open files can be unlinked).
  *
- *  NB The file must have been opened with msvc_posix_open() for this to work.
+ *  NB The file must have been opened with posixy_open() for this to work.
  */
-int msvc_posix_unlink(const char * filename);
+int posixy_unlink(const char * filename);
 
 /** Version of open() which allows the file to be unlinked while open. */
-int msvc_posix_open(const char *filename, int flags);
+int posixy_open(const char *filename, int flags);
+
+inline int
+posixy_open(const char *filename, int flags, int)
+{
+    // mode is ignored.
+    return posixy_open(filename, flags);
+}
 
 /** Version of rename() which overwrites an existing destination file. */
-int msvc_posix_rename(const char *from, const char *to);
+int posixy_rename(const char *from, const char *to);
+#else
+# define posixy_unlink(F) unlink(F)
+# define posixy_open ::open
+# define posixy_rename(F, T) rename(F, T)
+#endif
 
-#endif /* XAPIAN_INCLUDED_MSVC_POSIX_WRAPPER_H */
+#endif /* XAPIAN_INCLUDED_POSIXY_WRAPPER_H */
